# GEMpRF

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  fmri-python.pyproj  fmri.pyproj  fmri.sln  gem_program.py  init_setup.py  pyproject.toml  requirements.txt  run_gem.py  run_program.py
codebase/: __inti__.py
codebase-cpp/fmri-hpc/: class_based_main_1.cpp  fmri-hpc.vcxproj  fmri-hpc.vcxproj.filters  generate_column_summations.cu  generate_gaussian_curves_main.cu  generate_intermediate_result_stimulus_multiplied_gaussian_curves.cu  orthonormalize_signal.cu
codebase/0001-unit-tests/: 0. oprf-classes-tests.py
codebase/0002-prf-cuda-simple/: 01.write-hrf-stimulus-to-file.py  02.read-generated-gaussian-curves-for-verification.py  03.verify-intermediate_result_stimulus_multiplied_gaussian_curves.py  04.verify-cpp-cuda-results.py  04.verify-orthogonalization-results.py  05.read-timecourses-for-verification.py
codebase/0004-cuPy-gridfit/: 03.cupy-gridfit-profiling.py
codebase/0009_gem_analysis/: 0001_debug_gem_analysis.py  0001_gem_analysis.py  0004_bids_gem_analysis.py
codebase/005-gpu-pRF-analysis/: [gpu, gridfit, testspace, searchspace, refined, sigma]-prf-analysis.py  compute_inverse_matrix_M.py  cpu-prf-analysis.py  gpu-prf-analysis-grid-and-refined.py  gpu-prf-analysis.py  gpu-prf-analysis_test_and_search-grid-and-refined.py
codebase/006-gpu-pRF-analysis - [Working-grid-refined-sigma]/: 0010.run-concatenated_gpu-multi_gpu_tested-partially.py  MWE.py  (+12 more)
gem/: __init__.py  init_setup.py  run_gem.py
gemprf/: __init__.py
oprf/: __init__.py
(+296 files in other folders)
