[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemprf"
version = "0.1.11"
description = "A Python library for population receptive field (pRF) analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
  { name = "Siddharth Mittal", email = "siddharth.mittal@meduniwien.ac.at" }
]
dependencies = [
  # "cupy-cuda12x==13.4.1", # DISBALED, because different systems may have different CUDA versions installed
  "h5py==3.13.0",
  "joblib==1.4.2",
  "matplotlib==3.10.1",
  "nibabel==5.3.2",
  "numba==0.61.0",
  "numba_kdtree==0.6.0",
  "numpy==2.1.3",
  "nvidia_ml_py==12.570.86",
  "pandas==2.2.3",
  "pynvml==12.0.0",
  "scipy==1.15.2",
  "xmltodict==0.14.2",
  "lxml==5.3.0"
]

[project.urls]
Homepage = "https://gemprf.github.io/"

[tool.setuptools]
include-package-data = true  # enable MANIFEST.in support otherwise package won't be .ptx, .cu, .xml, .h5 files

[tool.setuptools.packages.find]
include = ["gem*", "gemprf*"]
exclude = ["gem.tests", "gem.tests.*"]